# f1

./: .env  .gitignore  .pylintrc  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
f1/: __init__.py  db.py  import.py  models.py  settings.py
f1/migrations/: env.py  script.py.mako
f1/migrations/versions/: 38efedfeb062_time_in_results_is_optional.py  4c0a00d4ddbe_acronym_is_optional_for_drivers.py  601783f19d16_link_results_to_results_status_via_.py  820d274e5095_base.py  c2349be4a954_add_pitstops.py  c2a1a1c1109c_lap_num_is_part_of_primary_key_in_laps.py  d30587edc395_results_and_resultsstatus.py  eb4faca60b62_add_altitude_to_circuits.py  f64fa8d2dc82_laps_table.py
