[tool.poetry]
name = "f1"
version = "0.1.0"
description = ""
authors = ["Nik Cubrilovic <git@nikcub.me>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.6.4"
pylint = "^2.2"
rope = "^0.20.1"
pylint-sqlalchemy = "^0.2.0"
twine = "^3.1.1"
ipython = "^7.15.0"
pytest = "^6.1.2"
pytest-watch = "^4.2.0"
mypy = "^0.790"
mdutils = "^1.2.2"
sqlalchemy-stubs = "^0.4"
pycodestyle = "^2.6.0"
pdbpp = "^0.10.2"
pytest-sugar = "^0.9.4"
tox = "^3.23.0"
autoflake = "^1.4"

[tool.black]
line-length = 99
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
